# daily-tender-bot

./: .gitignore  Dockerfile  Dockerfile.dockerignore  README.md  bot.py  main.py  pyproject.toml
app/: bot.py  config.py  constants.py  main.db  main.py  test.ipynb  utils.py
app/database/: config.py  models.py  repo.py
app/orm_models/: models.py  repo.py
