[tool.poetry]
name = "daily-tender-bot"
version = "0.1.0"
description = ""
authors = [
    "Kirill <nazarov1995@icloud.com>",
    "Kamil",
    "Patate"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
peewee = "^3.16.2"
scheduler = "^0.8.2"
pytelegrambotapi = "^4.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
